# tsuikaban_rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
lvls/: level0.txt  level1.txt  level10.txt  level11.txt  level12.txt  level13.txt  level14.txt  level15.txt  level16.txt  level17.txt  level18.txt  level2.txt  level3.txt  level4.txt  level5.txt  level6.txt  level7.txt  level8.txt  level9.txt
res/levels/: level17.txt  level18.txt  level19.txt
src/: game.rs  level_select.rs  main.rs  main_menu.rs  option_menu.rs  opts.rs  pause.rs  res.rs  state.rs
www/: index.html  tsuikaban_rs.wasm
