[package]
name = "tsuikaban_rs"
version = "0.1.0"
authors = ["Michael Chelli <michaelchelli00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
bincode = {version = "1.3", optional = true}
serde = {version = "1", optional = true, features=["derive"]}

[features]
save-options = ["bincode","serde"]

