[package]
name = "tsuikaban_rs"
version = "0.1.0"
resolver = "2"
authors = ["Michael Chelli <michaelchelli00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
bincode = {version = "2.0.0-rc.2", default-features = false, features = ["std", "derive"]}
quad-wasmnastics = "0.3"

